--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-tsc": "^1.0.24"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
     "@prisma/client": "^4.11.0",
     "@trpc/client": "^10.12.0",
     "@trpc/server": "^10.12.0",
