--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@prisma/client": "^4.11.0",
     "@trpc/client": "^10.12.0",
     "@trpc/server": "^10.12.0",
+    "mongoose": "^7.5.2",
+    "mongoose-bcrypt": "^1.11.0",
     "next-auth": "4.22.1",
     "superjson": "^1.12.2",
     "trpc-nuxt": "^0.7.0",
