--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@prisma/client": "^4.11.0",
     "@trpc/client": "^10.12.0",
     "@trpc/server": "^10.12.0",
+    "@types/uuid": "^9.0.4",
     "mongoose": "^7.5.2",
     "mongoose-bcrypt": "^1.11.0",
     "next-auth": "4.22.1",
     "superjson": "^1.12.2",
     "trpc-nuxt": "^0.7.0",
+    "uuid": "^9.0.1",
     "zod": "^3.21.2"
   }
 }
